<?xml version="1.0"?>
<package>
  <name>laser_keypoints</name>
  <version>0.0.1</version>
  <description>The laser_keypoints package</description>

  <maintainer email="ulas.b@milvusrobotics.com">ulas</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>dynamic_reconfigure</run_depend>
  <build_depend>pcl_ros</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>


  <export>
  </export>
</package>
